--- a/about.html
+++ b/about.html
@@ -32,8 +32,8 @@
 <footer>
   <p>Contact me: 	k.a.grunzweig@gmail.com</p>
   <img src="images/browsericon.png" class = "image3" alt = "Kate's icon">
-  <a href="https://www.instagram.com/aestheticsbydrkatherine/" class="fa fa-instagram" aria = "instagram"></a>
-  <a href="k.a.grunzweig@gmail.com" class="fa fa-envelope" aria = "email"></a>
+  <a href="https://www.instagram.com/aestheticsbydrkatherine/" class="fa fa-instagram" aria-label="instagram"></a>
+  <a href="k.a.grunzweig@gmail.com" class="fa fa-envelope" aria-label="email"></a>
 
 </footer>
 </html>
